--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - GRADIO_SERVER_NAME=0.0.0.0
       - GRADIO_SERVER_PORT=7860
       - PYTHONUNBUFFERED=1
-      - MODEL=granite3-dense:latest 
+      - MODEL=gemma3:1b
+      - LANGUAGE=spanish  # Set Spanish as the default language
 
     extra_hosts:
       - "host.docker.internal:host-gateway"  # Ensures host.docker.internal resolves to the host's IP
